docs/api/qiskit/0.33/qiskit.transpiler.passes.PulseGates.mdx
---
title: PulseGates (v0.33)
description: API reference for qiskit.transpiler.passes.PulseGates in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.PulseGates
---

# PulseGates

<Class id="qiskit.transpiler.passes.PulseGates" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/calibration/builders.py" signature="PulseGates(inst_map)" modifiers="class">
  Bases: `qiskit.transpiler.passes.calibration.builders.CalibrationBuilder`

  Pulse gate adding pass.

  This pass adds gate calibrations from the supplied `InstructionScheduleMap` to a quantum circuit.

  This pass checks each DAG circuit node and acquires a corresponding schedule from the instruction schedule map object that may be provided by the target backend. Because this map is a mutable object, the end-user can provide a configured backend to execute the circuit with customized gate implementations.

  This mapping object returns a schedule with “publisher” metadata which is an integer Enum value representing who created the gate schedule. If the gate schedule is provided by end-users, this pass attaches the schedule to the DAG circuit as a calibration.

  This pass allows users to easily override quantum circuit with custom gate definitions without directly dealing with those schedules.

  **References**

  *   \[1] OpenQASM 3: A broader and deeper quantum assembly language [https://arxiv.org/abs/2104.14722](https://arxiv.org/abs/2104.14722)

  Create new pass.

  **Parameters**

  **inst\_map** (`InstructionScheduleMap`) – Instruction schedule map that user may override.

  ## Methods

  <span id="qiskit-transpiler-passes-pulsegates-get-calibration" />

  ### get\_calibration

  <Function id="qiskit.transpiler.passes.PulseGates.get_calibration" signature="PulseGates.get_calibration(node_op, qubits)">
    Gets the calibrated schedule for the given instruction and qubits.

    **Parameters**

    *   **node\_op** (`Instruction`) – Target instruction object.
    *   **qubits** (`List`) – Integer qubit indices to check.

    **Return type**

    `Union`\[`Schedule`, `ScheduleBlock`]

    **Returns**

    Return Schedule of target gate instruction.
  </Function>

  <span id="qiskit-transpiler-passes-pulsegates-name" />

  ### name

  <Function id="qiskit.transpiler.passes.PulseGates.name" signature="PulseGates.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-pulsegates-run" />

  ### run

  <Function id="qiskit.transpiler.passes.PulseGates.run" signature="PulseGates.run(dag)">
    Run the calibration adder pass on dag.

    **Parameters**

    **dag** (`DAGCircuit`) – DAG to schedule.

    **Return type**

    `DAGCircuit`

    **Returns**

    A DAG with calibrations added to it.
  </Function>

  <span id="qiskit-transpiler-passes-pulsegates-supported" />

  ### supported

  <Function id="qiskit.transpiler.passes.PulseGates.supported" signature="PulseGates.supported(node_op, qubits)">
    Determine if a given node supports the calibration.

    **Parameters**

    *   **node\_op** (`Instruction`) – Target instruction object.
    *   **qubits** (`List`) – Integer qubit indices to check.

    **Return type**

    `bool`

    **Returns**

    Return `True` is calibration can be provided.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.PulseGates.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.PulseGates.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

